
	* launcher.c: Added a way to create a default experiment params file. Use something
	like ./launcher -x a -d paramfile to create. -x switch requires a parameter, so pass
	something random to it. It will not be used.

	* experimenter.c: Added a function for removing certain intervals from stream data
	in order to do model selection. Call with the same parameters as the experimenter,
	but add the -s switch. This creates stuttered files in the input directory.

2013-02-27  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* math_util.c: RMS and MSE error functions, function to shift an array so that none
	of the values it contains are negative.

	* combinefunction.c: Gaussian vector combination now normalises the values calculated
	based on the normalisation constant which is passed in.

	* estimator.c: Time delay estimates which use gaussians as the estimation method
	return normalised combined functions.

2013-02-26  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* math_util.c: Added some functions for computing the RSS,ESS,TSS, but not sure
	if they calculate what they are supposed to.

	* estimator_gaussian.c: Fixed memory leak due to incorrect free function usage.

	* experimenter.c: Basic analysis of experiment results is performed, and the results
	are output to a file in the directory for that experiment, currently only for the
	time delay estimation experiments.

	* estimator.c: New struct for storing data output by the multi_estimate function
	so that it can be analysed during experimentation.

2013-02-25  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* estimator_gaussian.c: Added output switch parameter to the estimator functions.
	Outputting the contribution of each gaussian takes extremely long, so if it is
	not necessary it should be done. The standard output is just the sum of gaussians
	if using the non-raw estimator. To output the contributions as well, a value of
	3 should be passed to the -t switch.
