@@ -77,6 +77,8 @@
 #define DEFAULT_EXP_INDIR "event_streams"
 #define DEFAULT_EXP_OUTDIR "experiment_output"
 #define DEFAULT_EXP_OUTFILE "exp"
+#define DEFAULT_EXP_UNIFORM_STUTTER "yes"
+#define DEFAULT_EXP_STUTTER_INTERVALS "10,15,30,40,65,70"
 #define DEFAULT_EXP_STUTTER_STEP 10.0
 #define DEFAULT_EXP_STUTTER_INTERVAL 5.0
 #define DEFAULT_EXP_RUN_SEP "no"
